--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,14 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'        # ✅ Required field
         java-version: '17'
+        java-package: 'jdk'
+        check-latest: false
+        server-id: 'github'
+        server-username: '${{ github.actor }}'
+        server-password: '${{ secrets.GITHUB_TOKEN }}'
+        overwrite-settings: true
 
     - name: Build with Maven
       run: mvn clean package
