modifying dockerfile and jenkins file

--- a/BACKEND/logcreator/Dockerfile
+++ b/BACKEND/logcreator/Dockerfile
@@ -1,5 +1,5 @@
-# Stage 1: Build the Java app using Maven
-FROM maven:3.8.6-openjdk-17 AS build
+# Stage 1: Build the Java app using Maven + JDK 17
+FROM maven:3.9.9-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
