--- a/BACKEND/logcreator/pom.xml
+++ b/BACKEND/logcreator/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>com.cisco.LogsMonitoringApp</groupId>
 		<artifactId>LogsMonitoringApp</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>com.cisco.demp</groupId>
 	<artifactId>logcreator</artifactId>
