--- a/BACKEND/logcreator/src/main/resources/application.properties
+++ b/BACKEND/logcreator/src/main/resources/application.properties
@@ -4,12 +4,16 @@ server.port=9096
 logging.level.org.springframework: DEBUG
 logging.level.org.springframework.security: DEBUG
 
-spring.datasource.url=jdbc:mysql://localhost:3306/logdb
-spring.datasource.username=root
-spring.datasource.password=tiger
+#spring.datasource.url=jdbc:mysql://localhost:3306/logdb
+#spring.datasource.username=root
+#spring.datasource.password=tiger
 
-spring.devtools.restart.enable=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.devtools.restart.enable=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+logfoldername=log
+logfilename=app-logs.txt
+external.service.url=http://localhost:9096/logs
