--- a/BACKEND/LogExport/src/main/resources/application.properties
+++ b/BACKEND/LogExport/src/main/resources/application.properties
@@ -5,13 +5,17 @@ server.port=9097
 logging.level.org.springframework: DEBUG
 logging.level.org.springframework.security: DEBUG
 
-spring.datasource.url=jdbc:mysql://localhost:3306/logdb
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/logdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/logdb
+#spring.datasource.username=root
+spring.datasource.username=postgres
+#spring.datasource.password=tiger
 spring.datasource.password=tiger
 
 spring.devtools.restart.enable=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name =org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
