--- a/FRONTEND/Jenkinsfile
+++ b/FRONTEND/Jenkinsfile
@@ -44,15 +44,12 @@ pipeline {
             }
         }
 
-        stage('Deploy Frontend') {
+        stage('Deploy with Docker Compose') {
             steps {
-                sh """
-                    echo "Cleaning up old frontend container..."
-                    docker rm -f log-processing-frontend || true
-
-                    echo "Deploying new frontend container..."
-                    docker run -d -p ${HOST_PORT}:${CONTAINER_PORT} --name log-processing-frontend ${FRONTEND_IMAGE}:${TAG}
-                """
+                script {
+                    sh 'docker-compose down || true'
+                    sh 'docker-compose up -d --build'
+                }
             }
         }
     }
