--- a/FRONTEND/docker-compose.yml
+++ b/FRONTEND/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   frontend:
     image: srini341/log-processing-frontend:latest
-    container_name: log-processing-frontend
+    container_name: log-processing-frontend-${BUILD_NUMBER}
     ports:
       - "3001:3000"
     restart: always
