--- a/BACKEND/logwarnpersistor/Dockerfile
+++ b/BACKEND/logwarnpersistor/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
 WORKDIR /app
 RUN ls
-COPY target/logwarnpersistor-0.0.1-SNAPSHOT.jar app.jar
+COPY target/logWarnPersistor-3.5.5.jar app.jar
 
 EXPOSE 8784
 
