--- a/BACKEND/logdebugpersistor/Dockerfile
+++ b/BACKEND/logdebugpersistor/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
 WORKDIR /app
 RUN ls
-COPY target/logdebugpersistor-0.0.1-SNAPSHOT.jar app.jar
+COPY target/logdebugpersistor-3.5.5.jar app.jar
 
 EXPOSE 8781
 
