--- a/BACKEND/loglistenercollector/Dockerfile
+++ b/BACKEND/loglistenercollector/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
 WORKDIR /app
 RUN ls
-COPY target/loglistenercollector-0.0.1-SNAPSHOT.jar app.jar
+COPY target/logListenerCollector-3.5.5.jar app.jar
 
 EXPOSE 8785
 
