--- a/BACKEND/logerrorpersistor/Dockerfile
+++ b/BACKEND/logerrorpersistor/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
 WORKDIR /app
 RUN ls
-COPY target/logErrorPersistor-3.5.5-SNAPSHOT.jar app.jar
+COPY target/logErrorPersistor-3.5.5.jar app.jar
 
 EXPOSE 8782
 
