Removed hardcoding coding

--- a/BACKEND/loglistenercollector/src/main/resources/application.properties
+++ b/BACKEND/loglistenercollector/src/main/resources/application.properties
@@ -25,7 +25,7 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 logfoldername=log
 logfilename=app-logs.txt
-log.infourl=http://localhost:8783/info
-log.errorurl=http://localhost:8782/error
-log.warnurl=http://localhost:8784/warn
-log.debugurl = http://localhost:8781/debug
+infourl=http://localhost:8783/info
+errorurl=http://localhost:8782/error
+warnurl=http://localhost:8784/warn
+debugurl=http://localhost:8781/debug
