modifying dockerfile and jenkins file

--- a/BACKEND/loggenerator/Jenkinsfile
+++ b/BACKEND/loggenerator/Jenkinsfile
@@ -4,37 +4,48 @@ pipeline {
     stages {
         stage('Clone Code') {
             steps {
-                echo "📥 Cloning repo (branch ramtest3)..."
-                git branch: 'ramtest3', url: 'https://github.com/vivekgshan/Log-Processing.git'
+                echo "🔄 Cloning code from GitHub..."
+                git branch: 'ramtest1', url: 'https://github.com/vivekgshan/Log-Processing.git'
             }
         }
 
-        stage('Build Docker Image') {
+        stage('Build with Maven') {
             steps {
-                echo "🐳 Building Docker image for loggenerator..."
+                echo "📦 Running mvn clean package..."
                 script {
                     if (isUnix()) {
-                        sh '''
-                        docker rm -f loggenerator || true
-                        docker build -t loggenerator:latest -f Backend/loggenerator/Dockerfile Backend/loggenerator
-                        '''
+                        sh 'mvn -f Backend/loggenerator/pom.xml clean package -DskipTests'
                     } else {
-                        bat 'docker rm -f loggenerator || exit 0'
-                        bat 'docker build -t loggenerator:latest -f Backend/loggenerator/Dockerfile Backend/loggenerator'
+                        bat 'mvn -f Backend\\loggenerator\\pom.xml clean package -DskipTests'
                     }
                 }
             }
         }
 
-        stage('Run App Container') {
+        stage('Build Docker Image') {
             steps {
-                echo "🚀 Running loggenerator container on port 8783..."
+                echo "🐳 Building Docker image..."
+                script {
+                    if (isUnix()) {
+                        sh 'docker build -t loggenerator:latest Backend/loggenerator'
+                    } else {
+                        bat 'docker build -t loggenerator:latest Backend\\loggenerator'
+                    }
+                }
+            }
+        }
+
+        stage('Run Container') {
+            steps {
+                echo "🚀 Running Docker container..."
                 script {
                     if (isUnix()) {
                         sh '''
+                        docker rm -f loggenerator || true
                         docker run -d --name loggenerator -p 8783:8783 loggenerator:latest
                         '''
                     } else {
+                        bat 'docker rm -f loggenerator || exit 0'
                         bat 'docker run -d --name loggenerator -p 8783:8783 loggenerator:latest'
                     }
                 }
@@ -43,13 +54,13 @@ pipeline {
 
         stage('Health Check') {
             steps {
-                echo "🔎 Checking if app is listening on port 8783..."
+                echo "💡 Checking if application is up..."
                 script {
                     if (isUnix()) {
                         sh '''
                         for i in {1..10}; do
-                          if nc -z localhost 8783; then
-                            echo "✅ App is listening on port 8783!"
+                          if curl -s http://localhost:8783/logs > /dev/null; then
+                            echo "✅ App is up!"
                             exit 0
                           fi
                           echo "Waiting for app... ($i/10)"
@@ -64,13 +75,10 @@ pipeline {
                         $success = $false
                         for ($i=1; $i -le $maxRetries; $i++) {
                           try {
-                            $tcp = New-Object Net.Sockets.TcpClient("localhost", 8783)
-                            if ($tcp.Connected) {
-                              Write-Host "✅ App is listening on port 8783!"
-                              $tcp.Close()
-                              $success = $true
-                              break
-                            }
+                            Invoke-WebRequest -UseBasicParsing http://localhost:8783/logs | Out-Null
+                            Write-Host "✅ App is up!"
+                            $success = $true
+                            break
                           } catch {
                             Write-Host "Waiting for app... ($i/$maxRetries)"
                             Start-Sleep -Seconds 5
@@ -85,29 +93,11 @@ pipeline {
                 }
             }
         }
-
-        stage('Show Logs on Failure') {
-            when {
-                expression { currentBuild.result == 'FAILURE' }
-            }
-            steps {
-                echo "📜 Dumping logs for debugging..."
-                script {
-                    if (isUnix()) {
-                        sh 'docker logs --tail 100 loggenerator || true'
-                    } else {
-                        bat 'docker logs --tail 100 loggenerator || exit 0'
-                    }
-                }
-            }
-        }
     }
 
     post {
         always {
-            echo "⚠️ Containers are not auto-removed. Debug with:"
-            echo "   docker ps -a"
-            echo "   docker logs loggenerator"
+            echo "⚠️ Debug Info: Run 'docker ps -a' and 'docker logs loggenerator' if app fails."
         }
     }
 }
