modifying dockerfile and jenkins file

--- a/BACKEND/loggenerator/Dockerfile
+++ b/BACKEND/loggenerator/Dockerfile
@@ -4,8 +4,8 @@ FROM eclipse-temurin:17-jdk
 # Set working directory inside container
 WORKDIR /app
 
-# Copy the JAR built by Jenkins into the container
-COPY target/logGenerator-*.jar app.jar
+# Copy the JAR built by Maven
+COPY Backend/loggenerator/target/logGenerator-*.jar app.jar
 
 # Expose app port (matches application.properties → 8783)
 EXPOSE 8783
